# cppgl

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile.am  NEWS  README  configure.ac
exampleProgram/: Makefile.am  exampleProgram.c
include/: GLObject.hpp  Makefile.am  libCppGL.h
include/error/: GLError.hpp
libCppGL/: Makefile.am  libCppGL.c
